# blog_tcc

./: README.md  mkdocs.yml  pyproject.toml
docs/: balanceamento_carga.md  caching.md  index.md  indices.md  polls.md  processamento_assincrono.md
