[tool.poetry]
name = "blog-tcc"
version = "0.1.0"
description = ""
authors = ["GabrielTeodoroSan <gabrielteodorodomingues@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.44"
taskipy = "^1.14.0"


[tool.taskipy.tasks]
run = 'mkdocs serve'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
